src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Frontbench__c</fullName>
        <label>Frontbench</label>
        <picklist>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>owhip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>p</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>whip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Headed_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick box when a person has requested NOT to receive identifiable ‘Alzheimer’s Society’ branded materials, correspondence, etc.</inlineHelpText>
        <label>Non-branded materials only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Date set inactive</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Health_Issues__c</fullName>
        <label>Key Health Issues</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional mental health issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning difficulties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epileptic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobility Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Skills Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wheelchair User</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Known_Link__c</fullName>
        <label>Personal Link with Dementia</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_as__c</fullName>
        <label>Known as</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_arrangements__c</fullName>
        <inlineHelpText>The Living Arrangements of the person. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Living Arrangements</label>
        <picklist>
            <picklistValues>
                <fullName>Own home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other family or friend&apos;s home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care or nursing home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheltered accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private rented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_authority__c</fullName>
        <label>Postcode Local Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Consent_Form__c</fullName>
        <inlineHelpText>Location of Consent Form must be included if anything other than Awaiting Consent or Verbal is selected.</inlineHelpText>
        <label>Location of Consent Form</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Salutation__c</fullName>
        <label>Mail Merge Salutation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b70000000uUbj&amp;eid=&quot; &amp;Id, IMAGE( &quot;/resource/GoogleMaps&quot;, &quot;GoogleMaps&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Means_of_first_contact__c</fullName>
        <label>Means of first contact</label>
        <picklist>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to face</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_type__c</fullName>
        <label>Member type</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Met_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Met with Society Representatives?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHS_Number__c</fullName>
        <inlineHelpText>The NHS Number is the national unique identifier that makes it possible to share patient information across the whole of the NHS safely, efficiently and accurately. The NHS Number is 10 numeric digits in length.</inlineHelpText>
        <label>NHS Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NI_Trust_Area__c</fullName>
        <description>Northern Irelend Health and Social Care Trust</description>
        <inlineHelpText>Enter the person&apos;s Health and Social Care Trust</inlineHelpText>
        <label>NI Trust Area</label>
        <picklist>
            <picklistValues>
                <fullName>BHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHSCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHSCT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Assessor__c</fullName>
        <label>Name of Assessor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Northing__c</fullName>
        <label>Northing</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_dependent_children__c</fullName>
        <label>Number of dependent children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observation__c</fullName>
        <label>Observation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Demographic_Details__c</fullName>
        <inlineHelpText>This MUST be completed if ‘OTHER’ has been selected in any of the demographic fields.</inlineHelpText>
        <label>Other Demographic Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_First_Language__c</fullName>
        <label>Other First Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_Carer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Change 344 - Paid Support Worker Attendances</description>
        <inlineHelpText>Tick this box if the person is a paid carer.</inlineHelpText>
        <label>Paid Carer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partnership_status__c</fullName>
        <inlineHelpText>The Partnership Status the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Partnership status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohabiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single (inc. separated, widowed etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnered (inc. married, civil partnership etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to answer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MP&apos;s party</description>
        <inlineHelpText>Political Party</inlineHelpText>
        <label>Party</label>
        <referenceTo>Political_Party__c</referenceTo>
        <relationshipLabel>MPs</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>People_in_household__c</fullName>
        <label>People in household</label>
        <picklist>
            <picklistValues>
                <fullName>Service User only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service User and others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not disclosed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client and others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PoA_Notes__c</fullName>
        <inlineHelpText>PoA Notes is to be used to specify the type of PoA and any other relevant PoA information.</inlineHelpText>
        <label>PoA Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Power_of_attorney_established__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power of attorney established?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_of_attorney_in_action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power of attorney registered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_means_of_contact__c</fullName>
        <inlineHelpText>Can include any specific details about when/how to contact the person</inlineHelpText>
        <label>Preferred method/time of contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Sector__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Please choose the main Sector the trainer/client covers/need</inlineHelpText>
        <label>Primary Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Friendly Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_care_trust__c</fullName>
        <label>Postcode Primary Care Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionAT__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Region the Trainer covers</inlineHelpText>
        <label>Society Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health - North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Care - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_with_Social_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Refers to whether person is registered with Social Services emergency contact database (if your area has such a database in operation.</inlineHelpText>
        <label>Registered with Social Services?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <description>Enter a date you would like an email reminder on.</description>
        <label>Reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_notes__c</fullName>
        <label>Reminder notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_date__c</fullName>
        <label>Renewal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Researcher_Email__c</fullName>
        <description>Researcher&apos;s email address</description>
        <label>Secondary / Researcher Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Researcher__c</fullName>
        <description>Researcher&apos;s name</description>
        <label>Researcher</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Sector__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>If the trainer covers another Sector other than the Promary Sector chosen,please specify here</inlineHelpText>
        <label>Secondary Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Friendly Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Usage_Alert_Count__c</fullName>
        <label>Service Usage Alert Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_user_aware_of_diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service User aware of diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sexual_Status__c</fullName>
        <inlineHelpText>The Sexual Orientation the person identifies with. They do not have to answer. ‘None’ means not asked; ‘Not Disclosed’ means was asked but didn’t answer.</inlineHelpText>
        <label>Sexual Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>Heterosexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bisexual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Service_Ref_No__c</fullName>
        <label>Social Service Ref. No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialist_Communication_Needs__c</fullName>
        <inlineHelpText>To record information to assist communication, such as whether the speak English; if they need an interpreter; if they use BSL; what may help effective communication, etc.</inlineHelpText>
        <label>Specialist Communication Needs</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Street_Line_1__c</fullName>
        <label>Street Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_3__c</fullName>
        <label>Street Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBE QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC DL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support</label>
        <picklist>
            <picklistValues>
                <fullName>Asked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contribute</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <inlineHelpText>If shown, this refers to whether person has been in military service (as benevolent funds may be available to access).</inlineHelpText>
        <label>Veteran?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Navy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - RAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Disclosed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ward__c</fullName>
        <label>Postcode Ward</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Worker_Type__c</fullName>
        <inlineHelpText>Specifies whether the user is a member of staff or a volunteer.</inlineHelpText>
        <label>Worker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Write_To__c</fullName>
        <description>Specifies the first line of an MP&apos;s address</description>
        <externalId>true</externalId>
        <label>Write To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Holiday_To__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Trainers holiday to</inlineHelpText>
        <label>1 Holiday To:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1_Holidays_From__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Trainer on Holiday from</inlineHelpText>
        <label>1 Holidays From:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2_Holiday_From__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Trainer: Second holiday in year</inlineHelpText>
        <label>2 Holiday From:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2_Holiday_To__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Trainer: Second holiday of year</inlineHelpText>
        <label>2 Holiday To:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3_Holiday_To__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Trainer: Third holiday of year</inlineHelpText>
        <label>3 Holiday To:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3_Holidays_From__c</fullName>
        <description>Alzheimer&apos;s Trading Ltd</description>
        <inlineHelpText>Trainer: Third holiday of year</inlineHelpText>
        <label>3 Holidays From:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>Any user can create an alert using the Public Alert Message Required on a service usage record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>testFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testFlag</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>APPG</fullName>
        <columns>FULL_NAME</columns>
        <columns>Party__c</columns>
        <columns>Constituency__c</columns>
        <columns>Constituency_Region__c</columns>
        <columns>APPG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APPG__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>APPG</label>
        <sharedTo>
            <roleAndSubordinates>ExternalAffairs</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts2</fullName>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Collectors</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Additional_notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Collector</value>
        </filters>
        <label>All Collectors</label>
        <sharedTo>
            <group>SystemAdministrators</group>
            <roleAndSubordinatesInternal>Fundraising</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_London_Assembly_Members</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.London_Assembly_Member</value>
        </filters>
        <label>All London Assembly Members</label>
        <sharedTo>
            <roleAndSubordinates>Fundraising</roleAndSubordinates>
            <roleAndSubordinatesInternal>External_Volunteers</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MPs</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.MP</value>
        </filters>
        <label>All MPs</label>
        <sharedTo>
            <roleAndSubordinates>Fundraising</roleAndSubordinates>
            <roleAndSubordinatesInternal>ExternalAffairs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Members_of_European_Parliment</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Member_of_European_Parliment</value>
        </filters>
        <label>All Members of European Parliment</label>
        <sharedTo>
            <roleAndSubordinates>Fundraising</roleAndSubordinates>
            <roleAndSubordinatesInternal>ExternalAffairs</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Members_of_NI_Legislative_Assemby</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Member_of_NI_Legislative_Assembly</value>
        </filters>
        <label>All Members of NI Legislative Assembly</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ExternalAffairs</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Fundraising</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Members_of_Welsh_Assemby</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Member_of_Welsh_Assembly</value>
        </filters>
        <label>All Members of Welsh Assembly</label>
        <sharedTo>
            <role>ExternalAffairs</role>
            <roleAndSubordinatesInternal>ExternalAffairs</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Fundraising</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>